--- a/Final Folder/Project_1_Group_1 - Presentation.Rmd
+++ b/Final Folder/Project_1_Group_1 - Presentation.Rmd
@@ -103,10 +103,19 @@ If you are ever looking at a data set and you find it hard to understand what ty
 **Response** - Also known as a dependent variable, this variable is the outcome variable that's explained or predicted by the explanatory variable. It's the expected effect of the explanatory variable.
 
 **Response:** 
-Species, sepal_length, sepal_width, petal_length, petal_width, sepal_area, petal_area, sepal_aspect_ratio, petal_aspect_ratio, sepal_to_petal_length_ratio, sepal_to_petal_width_ratio, sepal_to_petal_length_diff, sepal_to_petal_width_diff, petal_curvature_mm, petal_texture_trichomes_per_mm2, leaf_area_cm2, sepal_area_sprt, petal_area_sprt, area_ratios
+Response: 
+sepal_length, sepal_width, petal_length, petal_width, sepal_area, , sepal_aspect_ratio, petal_aspect_ratio, sepal_to_petal_length_ratio, sepal_to_petal_length_diff, sepal_to_petal_width_diff, petal_curvature_mm, petal_texture_trichomes_per_mm2, leaf_area_cm2, sepal_area_sprt, petal_area_sprt, area_ratios
 
-**Explanatory:** 
-Elevation, Soil_type
+**Explanatory:**
+Elevation, 
+
+**Factoring:** - the process of converting a variable into a factor, which is a data type used to represent categorical data. Factors store both the unique categories (called levels) and the values that belong to those categories. Factoring is commonly used when you want to classify data into distinct groups, such as types, species, or categories, for statistical modeling or analysis.
+
+Ex. After running this code, both the soil_type and species columns will be stored as factors in the iris.raw.data dataset, making it easier to perform tasks like grouping, summarization, or statistical modeling that depend on categorical variables.
+
+
+Where would these go?
+sepal_to_petal_width_ratio, Soil_type, petal_area, Species
 
 
 Once you are able to read the data into R your next step would be to use the following code:
